[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/CameraBorder.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="CameraBorder" type="StaticBody2D"]
input_pickable = false
collision_layer = 1
collision_mask = 4
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
script = ExtResource( 1 )
padding = Vector2( 40, 40 )

[node name="border_1" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="border_2" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="border_3" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="border_4" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

